--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "uvicorn (>=0.35.0,<0.36.0)",
     "pydantic (>=2.11.7,<3.0.0)",
     "aio-pika (>=9.5.7,<10.0.0)",
-    "uuid (>=1.30,<2.0)"
+    "uuid (>=1.30,<2.0)",
+    "isort (>=6.0.1,<7.0.0)",
+    "black (>=25.1.0,<26.0.0)"
 ]
 
 [tool.poetry]
