--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "aio-pika (>=9.5.7,<10.0.0)",
     "uuid (>=1.30,<2.0)",
     "isort (>=6.0.1,<7.0.0)",
-    "black (>=25.1.0,<26.0.0)"
+    "black (>=25.1.0,<26.0.0)",
+    "pytest (>=8.4.1,<9.0.0)"
 ]
 
 [tool.poetry]
