--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,8 @@ dependencies = [
     "uuid (>=1.30,<2.0)",
     "isort (>=6.0.1,<7.0.0)",
     "black (>=25.1.0,<26.0.0)",
-    "pytest (>=8.4.1,<9.0.0)"
+    "pytest (>=8.4.1,<9.0.0)",
+    "pytest-asyncio (>=1.1.0,<2.0.0)"
 ]
 
 [tool.poetry]
